grammar.js
      source_file: $ => repeat(choice($.rule,
                                      $.fact,
                                      $.integrity_constraint,
                                      $.comment,
                                      $.weak_constraint,
                                      $.statement,
                                      $._script,
                                      $.theory_statement)),

            /* rules */
      fact: $ => seq($._head, '.'),

      integrity_constraint: $ => seq(':-', $._body, '.'),

      _head: $ => choice($.literal,
                         alias($._head_aggregate, $.aggregate),
                         $.disjunction,
                         $.theory_atom),

      _body: $ => seq(repeat(choice(seq(choice($.literal,
                                               seq(optional($.default_negation),
                                                   optional($.default_negation),
                                                   choice(alias($._body_aggregate, $.aggregate),
                                                         $.theory_atom))),
                                        choice(',',
                                               ';')),
                                    seq($.conditional_literal, ';'))),
                      choice($.literal,
                             seq(optional($.default_negation),
                                 optional($.default_negation),
                                 choice(alias($._body_aggregate, $.aggregate),
                                       $.theory_atom)),
                             $.conditional_literal)),


      rule: $ => seq(optional(alias($._head, $.head)), ':-', optional(alias($._body, $.body)), '.'),

      /* rules end */

      term: $ => choice($.interval,
                         $._arithmetic_function,
                         $._bitwise_function,
                         $.function,
                         $.external_function,
                         // symbols
                         $.number,
                         $.string,
                         $.infimum,
                         $.supremum,
                         '_',
                         // symbols done
                         $.variable,
                         $.pool),

      terms: $ => prec.right(seq(repeat(seq($.term, ',')), $.term)),

      interval: $ => prec.left(seq($.term, '..', $.term)),

      _function_arguments: $ => seq(repeat(seq($.terms, choice(';', ','))), $.terms),

      function: $ => prec.right(seq($.identifier, optional(seq('(', optional($._function_arguments), ')')))),

      string: $ => seq('"', repeat(choice(/[^\"\n]/, /\\[\"n]/)), '"'),

      default_negation: $ => 'not',

      // inlined to disambiguate from minus
      classical_negation: $ => alias('-', $.classical_negation),

      identifier: $ => /_*[a-z][A-Za-z0-9_\']*/,

      variable: $ => /[_\']*[A-Z][\'A-Za-z0-9_]*/,

      number: $ => choice(/0|(?:[1-9][0-9]*)/, // decimal
                          /0x[0-9A-Fa-f]+/, // hexadecimal
                          /0o[1-7]+/, // octal
                          /0b[0-1]+/), // binary

      atom: $ =>  seq(optional($.classical_negation), $.function),

      // no explicit conditional literals as then ambiguous between literal and conditional literal.
      // instead, easy to check whether condition follows
      literal: $ => seq(optional($.default_negation),
                        optional($.default_negation),
                        choice($.boolean,
                               $.atom,
                               $.comparison)),

      _literals: $ => seq(repeat(seq($.literal, ',')), $.literal),

      boolean: $ => choice('#true', '#false'),

      _arithmetic_function: $ => choice($.plus,
                                        $.minus,
                                        $.times,
                                        $.divide,
                                        $.modulo,
                                        $.power,
                                        alias($.unary_minus, $.minus),
                                        $.absolute),

      _bitwise_function: $ => choice($.bitor,
                                     $.bitxor,
                                     $.bitand,
                                     $.bitneg),

      plus: $ => prec.left(seq($.term, '+', $.term)),

      minus: $ => prec.left(seq($.term, '-', $.term)),

      times: $ => prec.left(seq($.term, '*', $.term)),

      divide: $ => prec.left(seq($.term, '/', $.term)),

      modulo: $ => prec.left(seq($.term, '\\', $.term)),

      power: $ => prec.right(seq($.term, choice('**'), $.term)),

      bitneg: $ => seq('~', $.term),

      absolute: $ => seq('|', seq(repeat(seq($.term, ';')), $.term), '|'),

      comparison_predicate: $ => choice('=', '!=', '<', '<=', '>', '>='),

      lower_guard: $ => seq($.term, optional($.comparison_predicate)),

      upper_guard: $ => seq(optional($.comparison_predicate), $.term),

      comparison: $ => seq($.term,
                           $.comparison_predicate,
                           repeat(seq($.term, $.comparison_predicate)),
                           $.term,),

      condition: $ => seq(':', optional($._literals)),

      _optional_conditional_literal: $ => seq($.literal, optional($.condition)),

      // AKA a 'conjunction' in nongroundgrammar.yy
      conditional_literal: $ => seq($.literal, $.condition),

      /* aggregates start */

      _disjunction_elememt: $ => repeat1(choice(seq($.literal, choice(',', ';', '|')),
                                                seq($.literal, ':', ';'),
                                                seq($.literal, ':', $._literals, choice(';', '|')))),

      disjunction: $ => choice(seq($._disjunction_elememt, $._optional_conditional_literal),
                               $.conditional_literal),


      /* optimisation */
      priority: $ => seq('@', $.term),

      weight: $ => $.term,

      _optimize_statement: $ => seq(
          alias($._optimize_directive, $.directive),
          '{',
          optional(seq($.optimize_weight,
                       ',',
                       repeat(seq($._optimize_list_elem, ';')), $._optimize_list_elem)),
          '}', '.'),

      weak_constraint: $ => seq(':~', optional(alias($._body, $.body)), '.',
                                '[', $.optimize_weight, optional(seq(',', $.terms)), ']'),

      /* optimisation end */

      statement: $ => choice($._show_statement,
                             $._warning_statement,
                             $._edge_statement,
                             $._heuristic_statement,
                             $._projection_statement,
                             $._const_statement,
                             $._include_statement,
                             $._program_statement,
                             $._external_statement,
                             $._optimize_statement),

      show: $ => 'show',

      arity: $ => $.number,

      _show_statement: $ => seq(choice($._show_statement_atom,
                                       $._show_statement_term)),

      _warning_statement: $ => seq(alias($._defined_directive, $.directive),
                                   optional($.classical_negation), $.identifier, '/', $.number, '.'),

      _edge_statement: $ => seq(alias($._edge_directive, $.directive),
                               '(', seq(repeat(seq($.term, ',', $.term, ';')), $.term, ',', $.term), ')',
                               optional(seq(':', optional(alias($._body, $.body)))),  '.'),

      weight: $ => $.term,

      priority: $ => seq('@', $.term),

      modifier: $ => $.term,

      heuristic: $ => 'heuristic',

      _heuristic_statement: $ => seq(alias($._heuristic_directive, $.directive),
                                     $.atom, optional(seq(':', optional(alias($._body, $.body)))), '.',
                                    '[', $.weight, optional($.priority), ',', $.modifier, ']'),

      _projection_statement: $ => seq(alias($._project_directive, $.directive),
                                      choice(seq(optional($.classical_negation), $.identifier, '/', $.number, '.'),
                                             seq($.atom, optional(seq(':', optional(alias($._body, $.body)))),  '.'))),

      const: $ => 'const',

      _const_statement: $ => seq(alias($._const_directive, $.directive),
                                $.identifier, '=', $.term, '.',
                                optional(seq('[', choice('default', 'override'), ']'))),

      include: $ => 'include',

      _include_statement: $ => seq(alias($._include_directive, $.directive),
                                  choice($.string, seq('<', $.identifier, '>')), '.'),

      program: $ => 'program',

      _program_statement: $ => seq(alias($._program_directive, $.directive),
                                $.identifier, optional(seq('(', optional(seq(repeat(seq($.identifier, ',')), $.identifier)), ')')),'.'),

      external: $ => 'external',

      _external_statement: $ => seq(alias($._external_directive, $.directive),
                                   $.atom, optional(seq(':', optional(alias($._body, $.body)))), '.',
                                   optional(seq('[', $.term, ']'))),

      /* script stuff */
      _script: $ => choice(
          $.python,
          $.lua
      ),

      _script_directive: $ => seq('#', $.script),

      script: $ => 'script',

      script_contents: $ => /(?:(?:[^#])|(?:#[^e])|(?:#e[^n])|(?:#en[^d])|(?:#end[^\.]))+/,

      python: $ => seq(alias($._script_directive, $.directive),
                       '(python)', $.script_contents, '#end\.'),

      lua: $ => seq(alias($._script_directive, $.directive),
                    '(lua)', $.script_contents, '#end\.'),

      /* script stuff end */

      /* theories */
      _basic_theory_term: $ => choice($.identifier,
                                      $.number,
                                      $.string,
                                      $.infimum,
                                      $.supremum,
                                      $.variable),

      theory_term: $ => choice($._basic_theory_term,
                               seq($.theory_operator, $.theory_term),
                               seq($.theory_term, $.theory_operator, $.theory_term),
                               seq('{', optional($.theory_terms), '}'),
                               seq('[', optional($.theory_terms), ']'),
                               seq('(', optional(seq($.theory_terms, optional(','))), ')'),
                               seq($.identifier, '(', optional($.theory_terms), ')')),

      theory_atom_element: $ => choice(seq($.theory_terms, optional($.condition)),
                                       $.condition),

      _theory_atom_name: $ => choice($.identifier,
                                     seq('(', $.identifier, ')')),

      theory_atom: $ => choice(
          seq('&', $._theory_atom_name),
          seq('&', $._theory_atom_name, '{', optional($.theory_atom_elements), '}'),
          seq('&', $._theory_atom_name, '{', optional($.theory_atom_elements), '}', $.theory_operator, $.theory_term)
      ),
