test/corpus/conditions.txt
=============
One condition
=============

a :- b : c.

---

(source_file
  (rule
    (head
      (literal (atom (function (identifier)))))
    (body
      (conditional_literal
        (literal (atom (function (identifier))))
        (condition
          (literal (atom (function (identifier)))))))))


================
Three conditions
================

a :- b : c, d, e.

---

(source_file
  (rule
    (head
      (literal (atom (function (identifier)))))
    (body
      (conditional_literal
        (literal (atom (function (identifier))))
        (condition
          (literal (atom (function (identifier))))
          (literal (atom (function (identifier))))
          (literal (atom (function (identifier)))))))))


===============
Empty condition
===============

a :- b : .

---

(source_file
  (rule
    (head
      (literal (atom (function (identifier)))))
    (body
      (conditional_literal
        (literal (atom (function (identifier))))
        (condition)))))


=============
With conjunct
=============

a :- b : c; d.

---

(source_file
  (rule
    (head
      (literal (atom (function (identifier)))))
    (body
      (conditional_literal
        (literal (atom (function (identifier))))
        (condition
          (literal (atom (function (identifier))))))
      (literal (atom (function (identifier)))))))


============
Complex body
============

a :- b : c; d; e : f, g; h : ; i.

---

(source_file
  (rule
    (head
      (literal (atom (function (identifier)))))
    (body
      (conditional_literal
        (literal (atom (function (identifier))))
        (condition
          (literal (atom (function (identifier))))))
        (literal (atom (function (identifier))))
        (conditional_literal
          (literal (atom (function (identifier))))
          (condition
            (literal (atom (function (identifier))))
            (literal (atom (function (identifier))))))
        (conditional_literal
          (literal (atom (function (identifier))))
          (condition))
        (literal (atom (function (identifier)))))))
