test/corpus/logical_operators.txt
==================
Boolean constants.
==================

#true.
#false.

---

(source_file
  (fact (literal (boolean)))
  (fact (literal (boolean))))


===
NAF
===

#true :- not #false.

---

(source_file
  (rule (head (literal (boolean)))
        (body (literal (default_negation) (boolean)))))


=====================
Two kinds of negation
=====================

-fly(X) :- bird(X), not fly(X).

---

(source_file
  (rule
    (head
      (literal (atom (classical_negation) (function (identifier) (terms (term (variable)))))))
    (body
      (literal (atom (function (identifier) (terms (term (variable))))))
      (literal (default_negation) (atom (function (identifier) (terms (term (variable)))))))))


==========
Double NAF
==========

fly(X) :- bird(X), not not fly(X).

---

(source_file
  (rule
    (head
      (literal (atom (function (identifier) (terms (term (variable)))))))
    (body
      (literal (atom (function (identifier) (terms (term (variable))))))
      (literal (default_negation) (default_negation) (atom (function (identifier) (terms (term (variable)))))))))



==================
Classical negation
:error
==================

:- -#true.

---
