test/corpus/optimization.txt
========
Maximize
========

#maximize { Y@1,X : hotel(X), star(X,Y) }.

---

(source_file
  (optimise_statement
    (optimise_weight
      (weight (term (variable)))
      (priority (term (number))))
    (terms (term (variable)))
    (condition
      (literal (atom (function (identifier) (terms (term (variable))))))
      (literal (atom (function (identifier) (terms (term (variable)) (term (variable)))))))))


========
Minimize
========

#minimize { Y/Z@2,X : hotel(X), cost(X,Y), star(X,Z) }.

---

(source_file
  (optimise_statement
    (optimise_weight
      (weight (term
        (divide
          (term (variable))
          (term (variable)))))
      (priority (term (number))))
    (terms (term (variable)))
    (condition
    (literal (atom (function (identifier) (terms (term (variable))))))
    (literal (atom (function (identifier) (terms (term (variable)) (term (variable))))))
    (literal (atom (function (identifier) (terms (term (variable)) (term (variable)))))))))


=================
Weak constraint 1
=================

:~ noisy. [1@3]

---

(source_file
  (weak_constraint
    (body
      (literal (atom (function (identifier)))))
        (optimise_weight
          (weight (term (number)))
          (priority (term (number))))))


=================
Weak constraint 2
=================

:~ hotel(5). [-30@2,5]

---

(source_file
  (weak_constraint
    (body
      (literal
        (atom
          (function
            (identifier)
            (terms (term (number)))))))
    (optimise_weight
      (weight (term
        (minus
          (term (number)))))
      (priority (term (number))))
      (terms (term (number)))))
