test/corpus/other.txt
=========
Intervals
=========

grid(1..S,Y) :- X = 1..S, Y = 1..S - 1, size(S).

---

(source_file
  (rule
    (head
      (literal
        (atom (function
                (identifier)
                (terms
                  (interval (term (number)) (term (variable)))
                  (variable))))))
    (body
      (literal
        (comparison
          (term (variable))
          (comparison_predicate)
          (term (interval (term (number)) (term (variable))))))
        (literal
          (comparison
            (term (variable))
            (comparison_predicate)
            (term (interval (term (number)) (term (minus (term (variable)) (term (number))))))))
        (literal
          (atom (function
                  (identifier)
                  (term (variable))))))))
